force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/AGG_TXT__c.field-meta.xml
<CustomField>
    <fullName>AGG_TXT__c</fullName>
    <label>AGG_TXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>