force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/BCNR_STED_TXT__c.field-meta.xml
<CustomField>
    <fullName>BCNR_STED_TXT__c</fullName>
    <label>BCNR_STED_TXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>