force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/BCNR_VOC_CRGR_NM__c.field-meta.xml
<CustomField>
    <fullName>BCNR_VOC_CRGR_NM__c</fullName>
    <label>BCNR_VOC_CRGR_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>