force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/BLNG_DEPT_DIV_CD__c.field-meta.xml
<CustomField>
    <fullName>BLNG_DEPT_DIV_CD__c</fullName>
    <label>BLNG_DEPT_DIV_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>