force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/CLL_STG_CD__c.field-meta.xml
<CustomField>
    <fullName>CLL_STG_CD__c</fullName>
    <label>CLL_STG_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>