force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/CLLR_TEL_NO__c.field-meta.xml
<CustomField>
    <fullName>CLLR_TEL_NO__c</fullName>
    <label>CLLR_TEL_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>