force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/DLV_QTY__c.field-meta.xml
<CustomField>
    <fullName>DLV_QTY__c</fullName>
    <label>DLV_QTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>