force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/DLV_YMD__c.field-meta.xml
<CustomField>
    <fullName>DLV_YMD__c</fullName>
    <label>DLV_YMD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>