force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/DSTR_TLMT_YMD__c.field-meta.xml
<CustomField>
    <fullName>DSTR_TLMT_YMD__c</fullName>
    <label>DSTR_TLMT_YMD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>