force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/GD_NO__c.field-meta.xml
<CustomField>
    <fullName>GD_NO__c</fullName>
    <label>GD_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>