force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/IMG_FILE_ID__c.field-meta.xml
<CustomField>
    <fullName>IMG_FILE_ID__c</fullName>
    <label>IMG_FILE_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>