force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/IMPT_DEPT_DIV_CD__c.field-meta.xml
<CustomField>
    <fullName>IMPT_DEPT_DIV_CD__c</fullName>
    <label>IMPT_DEPT_DIV_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>