force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/IMPT_VGU_YN__c.field-meta.xml
<CustomField>
    <fullName>IMPT_VGU_YN__c</fullName>
    <label>IMPT_VGU_YN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>