force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/ISU_CL_CD__c.field-meta.xml
<CustomField>
    <fullName>ISU_CL_CD__c</fullName>
    <label>ISU_CL_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>