force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/LOTN_DTL_ADDR__c.field-meta.xml
<CustomField>
    <fullName>LOTN_DTL_ADDR__c</fullName>
    <label>LOTN_DTL_ADDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>