force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/MA_EMP_NM__c.field-meta.xml
<CustomField>
    <fullName>MA_EMP_NM__c</fullName>
    <label>MA_EMP_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>