force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/MD_EMP_HPNO__c.field-meta.xml
<CustomField>
    <fullName>MD_EMP_HPNO__c</fullName>
    <label>MD_EMP_HPNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>