force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/MENU_TXT__c.field-meta.xml
<CustomField>
    <fullName>MENU_TXT__c</fullName>
    <label>MENU_TXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>