force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/MNGPLC_ADDR__c.field-meta.xml
<CustomField>
    <fullName>MNGPLC_ADDR__c</fullName>
    <label>MNGPLC_ADDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>