force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/NORM_YN__c.field-meta.xml
<CustomField>
    <fullName>NORM_YN__c</fullName>
    <label>NORM_YN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>