force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/NUTR_EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>NUTR_EMP_ID__c</fullName>
    <label>NUTR_EMP_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>