force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/ORDR_UNIT_CD__c.field-meta.xml
<CustomField>
    <fullName>ORDR_UNIT_CD__c</fullName>
    <label>ORDR_UNIT_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>