force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/PRS_TXT_CD__c.field-meta.xml
<CustomField>
    <fullName>PRS_TXT_CD__c</fullName>
    <label>PRS_TXT_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>