force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/RCP_ROUT_CD__c.field-meta.xml
<CustomField>
    <fullName>RCP_ROUT_CD__c</fullName>
    <label>RCP_ROUT_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>