force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/REAL_YN__c.field-meta.xml
<CustomField>
    <fullName>REAL_YN__c</fullName>
    <label>REAL_YN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>