force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/REG_DT__c.field-meta.xml
<CustomField>
    <fullName>REG_DT__c</fullName>
    <label>REG_DT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>