force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/REGR_NM__c.field-meta.xml
<CustomField>
    <fullName>REGR_NM__c</fullName>
    <label>REGR_NM</label>
    <length>60</length>
    <type>Text</type>
</CustomField>