force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/reqr_div_cd__c.field-meta.xml
<CustomField>
    <fullName>reqr_div_cd__c</fullName>
    <label>reqr_div_cd</label>
    <length>3</length>
    <type>Text</type>
</CustomField>