force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/REQR_NM__c.field-meta.xml
<CustomField>
    <fullName>REQR_NM__c</fullName>
    <label>REQR_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>