force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/RQRM_CD__c.field-meta.xml
<CustomField>
    <fullName>RQRM_CD__c</fullName>
    <label>RQRM_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>