force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/SHPTO_ADDR__c.field-meta.xml
<CustomField>
    <fullName>SHPTO_ADDR__c</fullName>
    <label>SHPTO_ADDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>