force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/SLST_ID__c.field-meta.xml
<CustomField>
    <fullName>SLST_ID__c</fullName>
    <label>SLST_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>