force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/transactionId__c.field-meta.xml
<CustomField>
    <fullName>transactionId__c</fullName>
    <externalId>true</externalId>
    <label>transactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>