force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/UPDR_NM__c.field-meta.xml
<CustomField>
    <fullName>UPDR_NM__c</fullName>
    <label>UPDR_NM</label>
    <length>60</length>
    <type>Text</type>
</CustomField>