force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/VOC_LCLS_ID__c.field-meta.xml
<CustomField>
    <fullName>VOC_LCLS_ID__c</fullName>
    <label>VOC_LCLS_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>