force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_MASTER__c/fields/VOC_RSN_CD__c.field-meta.xml
<CustomField>
    <fullName>VOC_RSN_CD__c</fullName>
    <label>VOC_RSN_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>